hphp/hack/test/typecheck/namespace_empty_identifier.php.exp
File "namespace_empty_identifier.php", line 4, characters 7-8:
Unbound global function: '' is not a valid name for fun() (Naming[2105])
